# apps/api/src/db/schema/index.ts
@@ -8,5 +8,7 @@ export * from './sites';
 export * from './blocks';
 export * from './object-definitions';
 export * from './object-records';
+export * from './content-types';
+export * from './content-entries';
 export * from './style-books';
 export * from './system-settings';
